--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <input type="text" id="matricula" placeholder="Digite sua matrícula">
 
             <label for="simulado">Selecione o Simulado:</label>
-            <select id="simulado">
+            <select id="simulado" disabled>
                 <option value="">Carregando simulados...</option>
             </select>
 
-            <button id="btnConsultar">Consultar</button>
+            <button id="btnConsultar">
+                <span>Consultar</span>
+            </button>
         </div>
 
         <div id="resultado">
