--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="container">
         <h1>Portal do Aluno</h1>
         <p>Consulte aqui o resultado dos seus simulados.</p>
@@ -21,13 +20,12 @@
                 <option value="">Carregando simulados...</option>
             </select>
 
-            <button id="btnConsultar">
+            <button id="btnConsultar" disabled>
                 <span>Consultar</span>
             </button>
         </div>
 
-        <div id="resultado">
-            </div>
+        <div id="resultado"></div>
     </div>
 
     <script src="script.js"></script>
